Add cassandra test resources + fix the backfill CLI